--- a/index.html
+++ b/index.html
@@ -12,31 +12,73 @@
     <img src="images/lj.jpeg">
     <p>BTS is a south Korean boy group made of seven members. The group first debuted in 2013 under Big hit entertainment. The group sole focus is music, dance and rap</p>
     <p>They are divided into minor subunits:
+
         <ul>
+            <div class="row">
+                <div class="column">
             <li>Rap line</li>
+            <img src="images/images.jpeg">  
+            </div>
+            <br>
+            <div class="row">
+                <div class="column">
             <li>Dance line</li>
+            <img src="images/d1.jpeg"> 
+            </div> 
+            <br>
+            <div class="row">
+                <div class="column">          
             <li>vocal line</li>
+            <img src="images/bt2.jpeg">   
+            </div>
+            <br>
+            </div>
         </ul>
         This are the proffesional subunits.
         Members include;
-         <ul>
+         <ul> 
+             <div class="row">
+            <div class="column"> 
              <li>Jin</li>
+             <img src="images/jin.jpeg">  
+            </div> 
+             <div class="column"> 
              <li>Suga</li>
+             <img src="images/s.jpeg">  
+            </div> 
+             <div class="column"> 
              <li>Jhope</li>
+             <img src="images/jh.jpeg"> 
+            </div>  
+             <div class="column">
              <li>RM</li>
+             <img src="images/rm.jpeg"> 
+            </div>
+            </div>
+            <div class="row">
+             <div class="column">  
              <li>Jimin</li>
+             <img src="images/jm.jpeg"> 
+            </div>
+             <div class="column"> 
              <li>V</li>
+             <img src="images/v.jpeg">  
+            </div>
+             <div class="column"> 
              <li>Jungkook</li>
+             <img src="images/jk.jpeg"> 
+            </div>  
+            </div>
          </ul>
          These however are there stage names.
     </p>
     <p>They are the first Kpop group to make wave in the American and Europe market and succeded.</p>
     <p>There best selling songs are
         <ul>
-            <li>Dna</li>
-            <li>Fake love</li>
-            <li>Boy-with-love</li>
-            <li>Spring day</li>
+            <li><a href="https://youtu.be/MBdVXkSdhwU">Dna</a></li>
+            <li><a href="https://www.youtube.com/watch?v=1zDd-3J1nTg">Boy With Love</a></li>
+            <li><a href="https://www.youtube.com/watch?v=7C2z4GqqS5E">Fake Love</a></li>
+            <li><a href="https://www.youtube.com/watch?v=xEeFrLSkMm8">Spring day</a></li>
         </ul>
         this are just to mention a few...
         A side form being a band they are also members of charitable communities such as UNICEF and also donate other small charity communities as a way of giving back to society.
